# treadmill-dash

./: .gitignore  README.md  pyproject.toml
src/treadmill_dash/: __init__.py  __main__.py  clipboard.py  config.py  html_stats.py  models.py
src/treadmill_dash/ble/: __init__.py  connection.py  ftms.py  scanner.py
src/treadmill_dash/db/: __init__.py  repository.py  schema.py
src/treadmill_dash/teams/: __init__.py  auth.py  meeting_detector.py
src/treadmill_dash/ui/: dashboard.py
